--- a/assets/css/framework/framework.css
+++ b/assets/css/framework/framework.css
@@ -18,6 +18,10 @@ body {
 .flex-center-v {
   align-items: center;
 }
+.flex-center {
+    align-items: center;
+    justify-content: center;
+  }
 .text-center {
   text-align: center;
 }
@@ -37,16 +41,22 @@ body {
   flex: 5;
 }
 .gap-5 {
-  gap: 5;
+  gap: 5px;
 }
 .gap-10 {
-  gap: 10;
+  gap: 10px;
 }
 .gap-15 {
-  gap: 15;
+  gap: 15px;
 }
 .gap-20 {
-  gap: 20;
+  gap: 20px;
+}
+.wrap{
+    flex-wrap:wrap ;
+}
+.nowrap{
+    flex-wrap:nowrap ;
 }
 
 input,
@@ -61,20 +71,23 @@ a {
   text-decoration: none;
   color: black;
 }
-.ul {
+ul {
   margin: 0;
   cursor: pointer;
   padding: 0;
+  list-style: none;
 }
+
 button {
   cursor: pointer;
 }
 i {
   color: #ccc;
   font-size: 1.3rem;
+  cursor: pointer;
 }
 .box {
-  box-shadow: 0px 4px 8px rgba(0, 0, 0/10%);
+  box-shadow: 0px 4px 8px rgb(218, 218, 218);
 }
 
 .absolute {
@@ -85,4 +98,57 @@ i {
 }
 .fixed {
   position: fixed;
+}
+.profil-picture img {
+  width: 50px;
+  border-radius: 50px;
+}
+[class$="-xl"] {
+  width: 89%;
+  margin: 20px auto;
+}
+[class$="-m"] {
+    width: 70%;
+    margin: 20px auto;
+  }
+.center-element{
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+}
+.paginate{
+    margin: 20px 0;
+}
+.paginate-ithem{
+    width: 50px;
+    height: 50px;
+    border-radius: 100px;
+    font-size: 2.5rem;
+    background-color: red;
+    color: white;
+}
+.paginate-ithem.active{
+  
+    background-color:gray;
+
+    
+}
+@media screen and (max-width: 900px) {
+  [class$="-xl"] {
+    width: 90%;
+    
+  }
+  [class$="-m"] {
+    width: 80%;}
+   
+}
+@media screen and(max-width: 650px) {
+  [class$="-xl"] {
+    width: 95%;
+    
+  }
+  [class$="-m"] {
+    width: 90%;
+   
+}
 }
