changement photo profil

--- a/assets/css/framework/framework.css
+++ b/assets/css/framework/framework.css
@@ -104,7 +104,7 @@ i {
   }
 .profil-picture img {
   width: 50px;
-  border-radius: 50px;
+  border-radius: 50%;
 }
 [class$="-xl"] {
   width: 89%;
