--- a/assets/css/framework/framework.css
+++ b/assets/css/framework/framework.css
@@ -19,9 +19,9 @@ body {
   align-items: center;
 }
 .flex-center {
-    align-items: center;
-    justify-content: center;
-  }
+  align-items: center;
+  justify-content: center;
+}
 .text-center {
   text-align: center;
 }
@@ -52,11 +52,11 @@ body {
 .gap-20 {
   gap: 20px;
 }
-.wrap{
-    flex-wrap:wrap ;
+.wrap {
+  flex-wrap: wrap;
 }
-.nowrap{
-    flex-wrap:nowrap ;
+.nowrap {
+  flex-wrap: nowrap;
 }
 
 input,
@@ -100,8 +100,8 @@ i {
   position: fixed;
 }
 .sticky {
-    position: sticky;
-  }
+  position: sticky;
+}
 .profil-picture img {
   width: 50px;
   border-radius: 50%;
@@ -111,54 +111,45 @@ i {
   margin: 20px auto;
 }
 [class$="-m"] {
-    width: 70%;
-    margin: 20px auto;
-  }
-.center-element{
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
+  width: 70%;
+  margin: 20px auto;
 }
-.paginate{
-    margin: 20px 0;
+.center-element {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-.paginate-ithem{
-    width: 50px;
-    height: 50px;
-    border-radius: 100px;
-    font-size: 2.5rem;
-    background-color: red;
-    color: white;
+.paginate {
+  margin: 20px 0;
 }
-.paginate-ithem.active{
-  
-    background-color:gray;
-
-    
+.paginate-ithem {
+  width: 50px;
+  height: 50px;
+  border-radius: 100px;
+  background-color: red;
+}
+.paginate-ithem a {
+  font-size: 2.5rem;
+  color: white;
+}
+.paginate-ithem.active {
+  background-color: gray;
 }
 @media screen and (max-width: 1550px) {
-    [class$="m"] {
-      width: 95%;
-      
-    }
-    
-     
+  [class$="m"] {
+    width: 95%;
   }
+}
 @media screen and (max-width: 900px) {
   [class$="-xl"] {
     width: 90%;
-    
   }
-  
-   
 }
 @media screen and(max-width: 650px) {
   [class$="-xl"] {
     width: 95%;
-    
   }
   [class$="-m"] {
     width: 90%;
-   
-}
+  }
 }
